<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_form_lancamento"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#CCCCCC" >

    <LinearLayout
        android:id="@+id/header_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/gray"
        android:orientation="horizontal"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <Button
            android:id="@+id/btn_form_config_voltar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#4283de"
            android:minHeight="50dip"
            android:text="@string/voltar"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="128dp"
            android:layout_height="44dp"
            android:layout_marginTop="7dp"
            android:layout_weight="0.68"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_form_config_salvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"            
            android:minHeight="50dip"
            android:text="@string/salvar"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_bottom"
        android:background="#CCCCCC"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:focusableInTouchMode="true" >

            <TextView
                android:id="@+id/textView_form_config_msg_cadastro_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/msg_cadastro_senha"
                android:textColor="#372c24" />
            
            <TextView
                android:id="@+id/textView_form_config_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_form_config_msg_cadastro_senha"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:labelFor="@+id/edit_form_config_senha"
                android:text="@string/senha"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/edit_form_config_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_form_config_senha"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
            	android:ems="10"
            	android:inputType="textPassword"
            	android:singleLine="true" />
            
            <TextView
                android:id="@+id/textView_form_config_confirm_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_form_config_senha"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:labelFor="@+id/edit_form_config_confirm_senha"
                android:text="@string/confirm_senha"
                android:textColor="#372c24" />

            <EditText
                android:id="@+id/edit_form_config_confirm_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_form_config_confirm_senha"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
            	android:ems="10"
            	android:inputType="textPassword"
            	android:singleLine="true" />

            <Button
                android:id="@+id/btn_form_config_salvar_dados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_form_config_confirm_senha"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#4283de"
                android:minHeight="50dip"
                android:text="@string/salvar_dados"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
            
            <Button
                android:id="@+id/btn_form_config_restaurar_dados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_form_config_salvar_dados"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#4283de"
                android:minHeight="50dip"
                android:text="@string/restaurar_dados"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
            
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>